# azure_rag_poc

./: .gitignore  README.md  app.py  convert_pdf.py  list_deployments.py  main.ipynb  main.py  pyproject.toml  rag_engine.py  requirements.txt
data/: contoso_handbook.md  sample.txt
src/azure_rag_poc/: app.py  rag_engine.py
