[project]
name = "azure-rag-poc"
version = "0.1.0"
description = "Azure RAG POC Project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit",
    "azure-search-documents",
    "azure-identity",
    "langchain>=0.3.0,<0.4.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "python-dotenv",
    "requests",
    "markitdown"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/azure_rag_poc"]
